ola-parser/src/testdata/syntaxTests/parsing/mapping_from_address_payable.sol
contract C {
    mapping(address payable => u256) m;
}
// ----
// ParserError 2314: (33-40): Expected '=>' but got 'payable'
